--- a/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pendaftaran_Tenant.Models.Karyawan
+﻿
 
 @{
     ViewBag.Title = "CreateKaryawan";
@@ -9,119 +9,166 @@
     <link rel="stylesheet" href="~/Content/bootstrap-nav-wizard.css" type="text/css" />
 
 }
-<div class="text-center">
-    <ul class="nav nav-wizard" style="display:inline-block">
-        <li><a style="color:#47a447">Design Website</a></li>
-        <li><a style="color:#47a447">Gambar Homepage</a></li>
-        <li class="active"><a>Data Produk, Bahan, dan Jenis Sablon</a></li>
-        <li><a style="color:#47a447">Data Harga</a></li>
 
-    </ul>
-</div>
-<br />
-
-<br />
 <div class="row">
     @Html.ActionLink("Lanjut ke penambahan produk >>", "CreateProduk", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi data karyawan dan hendak melanjutkan ke pengisian produk?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })
 </div>
 <br />
-<div class="row">
-    <div class="col-md-12 col-xs-12" style="margin-left:28%">
-        <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%">
+
+    <div class="col-md-6 col-xs-6">
+        <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%;margin-left:10%">
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
 
-                <h4>Karyawan</h4>
+                <h3 style="color:#47a447">I S I &nbsp; &nbsp; D A T A &nbsp;&nbsp; K A R Y A W A N</h3>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <table style="border:0 solid;float:none;margin:0 auto">
                     <tr><th style="text-align:center">Nama Karyawan</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.nama_karyawan, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.nama_karyawan, "", new { @class = "text-danger" })
+                            <input type="text" class="form-control text-center" id="namabahan" name="nama_karyawan" />
                         </td>
                     </tr>
                     <tr><th style="text-align:center">Email Karyawan</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.email_karyawan, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.email_karyawan, "", new { @class = "text-danger" })
+                            <input type="text" class="form-control text-center" id="namabahan" name="email_karyawan" />
                         </td>
                     </tr>
                     <tr><th style="text-align:center">Password</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                            <input type="password" class="form-control text-center" id="namabahan" name="password" />
                         </td>
                     </tr>
                     <tr><th style="text-align:center">Tempat Lahir</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.tempat_lahir, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.tempat_lahir, "", new { @class = "text-danger" })
+                            <input type="text" class="form-control text-center" id="namabahan" name="tempat_lahir" />
                         </td>
                     </tr>
                     <tr><th style="text-align:center">Tanggal Lahir</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.DropDownListFor(model => model.tanggal, Enumerable.Range(1, 31).Select(i => new SelectListItem { Text = i.ToString(), Value = i.ToString() }))
-                            &nbsp;
-                            @Html.DropDownListFor(model => model.bulan, new List<SelectListItem> {
-                                                                               new SelectListItem() {Text="Januari", Value="Januari"},
-                                                                               new SelectListItem() {Text="Februari", Value="Februari"},
-                                                                               new SelectListItem() {Text="Maret", Value="Maret"},
-                                                                               new SelectListItem() {Text="April", Value="April"},
-                                                                               new SelectListItem() {Text="May", Value="May"},
-                                                                               new SelectListItem() {Text="Juni", Value="Juni"},
-                                                                               new SelectListItem() {Text="Juli", Value="Juli"},
-                                                                               new SelectListItem() {Text="Agustus", Value="Agustus"},
-                                                                               new SelectListItem() {Text="September", Value="September"},
-                                                                               new SelectListItem() {Text="Oktober", Value="Oktober"},
-                                                                               new SelectListItem() {Text="November", Value="November"},
-                                                                               new SelectListItem() {Text="Desember", Value="Desember"},
-                                                                           })
-                            &nbsp;
-                            @Html.DropDownListFor(model => model.tanggal, Enumerable.Range(1960, 2018).Select(i => new SelectListItem { Text = i.ToString(), Value = i.ToString() }))
-                            &nbsp;
+                            <div class="dropdown" style="display:inherit;padding-right:10px">
+                                <button class="btn btn-default dropdown-toggle" style="width:60px" type="button" data-toggle="dropdown" name="tanggal" id="btntanggal">
+                                    Tgl
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntanggal">
+                                    @for (int tgl = 1; tgl <= 31; tgl++)
+                                    {
+                                        <li><a href="#/">@tgl.ToString()</a></li>
+                                    }
+                                </ul>
+                            </div>
+                            <div class="dropdown" style="display:inherit">
+                                <button class="btn btn-default dropdown-toggle" style="width:100px" type="button" data-toggle="dropdown" name="bulan" id="btnbulan">
+                                    Bulan
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdownbulan">
+
+                                    <li><a href="#/">Januari</a></li>
+                                    <li><a href="#/">Februari</a></li>
+                                    <li><a href="#/">Maret</a></li>
+                                    <li><a href="#/">April</a></li>
+                                    <li><a href="#/">Mei</a></li>
+                                    <li><a href="#/">Juni</a></li>
+                                    <li><a href="#/">Juli</a></li>
+                                    <li><a href="#/">Agustus</a></li>
+                                    <li><a href="#/">September</a></li>
+                                    <li><a href="#/">Oktober</a></li>
+                                    <li><a href="#/">November</a></li>
+                                    <li><a href="#/">Desember</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="dropdown" style="display:inherit;padding-left:10px">
+                                <button class="btn btn-default dropdown-toggle" style="width:80px" type="button" data-toggle="dropdown" name="tahun" id="btntahun">
+                                    Tahun
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntahun">
+                                    @for (int tgl = 1960; tgl <= 2018; tgl++)
+                                    {
+                                        <li><a href="#/">@tgl.ToString()</a></li>
+                                    }
+                                </ul>
+                            </div>
+
+
                         </td>
                     </tr>
+
                     <tr><th style="text-align:center">No Telepon</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.no_telp, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.no_telp, "", new { @class = "text-danger" })
+                            <input type="text" class="form-control text-center" id="namabahan" name="no_telp" />
                         </td>
                     </tr>
 
                     <tr><th style="text-align:center">Alamat</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.EditorFor(model => model.alamat, new { htmlAttributes = new { @class = "form-control text-center" } })
-                            @Html.ValidationMessageFor(model => model.alamat, "", new { @class = "text-danger" })
+                            <input type="text" class="form-control text-center" id="namabahan" name="alamat" />
                         </td>
                     </tr>
                     <tr><th style="text-align:center">Jenis Kelamin</th></tr>
                     <tr>
                         <td style="padding-bottom:10px">
-                            @Html.DropDownListFor(model => model.jns_kelamin, new List<SelectListItem> {
-                                                                   new SelectListItem() {Text="L", Value="L"},
-                                                                   new SelectListItem() {Text="P", Value="P"},
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" name="jns_kelamin" id="btnjk">
+                                    Jenis Kelamin
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" id="dropdownjk">
 
-                                                               })
+                                    <li><a href="#/">L</a></li>
+                                    <li><a href="#/">P</a></li>
+
+                                </ul>
+                            </div>
                         </td>
                     </tr>
 
                 </table>
 
                 <input type="submit" value="Create" class="btn btn-success" />
+                <br />
+                <br />
+                <script type="text/javascript">
+                    $(function () {
 
-                <br />
-                <br />
+                        $("#dropdowntanggal").on('click', 'li a', function () {
+                            $("#btntanggal").text($(this).text());
+                            $("#btntanggal").val($(this).text());
+                            var tes = $(this).text();
+
+                        });
+                        $("#dropdownbulan").on('click', 'li a', function () {
+                            $("#btnbulan").text($(this).text());
+                            $("#btnbulan").val($(this).text());
+                            var tes = $(this).text();
+
+                        });
+                        $("#dropdowntahun").on('click', 'li a', function () {
+                            $("#btntahun").text($(this).text());
+                            $("#btntahun").val($(this).text());
+                            var tes = $(this).text();
+
+                        });
+                        $("#dropdownjk").on('click', 'li a', function () {
+                            $("#btnjk").text($(this).text());
+                            $("#btnjk").val($(this).text());
+                            var tes = $(this).text();
+
+                        });
+                    });
+                </script>
             }
         </div>
     </div>
-</div>
