--- a/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
@@ -32,7 +32,10 @@
     <ul class="nav nav-wizard" style="display:inline-block">
         <li class="active"><a>Design Website</a></li>
         <li><a style="color:#47a447">Gambar Homepage</a></li>
-        <li><a style="color:#47a447">Data Produk, Bahan, dan Jenis Sablon</a></li>
+        <li><a style="color:#47a447">Data Karyawan</a></li>
+        <li><a style="color:#47a447">Data Produk</a></li>
+        <li><a style="color:#47a447">Data Bahan</a></li>
+        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
         <li><a style="color:#47a447">Data Harga</a></li>
 
     </ul>
