--- a/Pendaftaran_Tenant/Views/Penyewa/IndexKaryawan.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexKaryawan.cshtml
@@ -9,42 +9,42 @@
     <link rel="stylesheet" href="~/Content/bootstrap-nav-wizard.css" type="text/css" />
 
 }
+<br />
+<div class="text-center">
+    <ul class="nav nav-wizard" style="display:inline-block">
+        <li><a style="color:#47a447">Design Website</a></li>
+        <li><a style="color:#47a447">Gambar Homepage</a></li>
+        <li class="active"><a>Data Karyawan</a></li>
+        <li><a style="color:#47a447">Data Produk</a></li>
+        <li><a style="color:#47a447">Data Bahan</a></li>
+        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
+        <li><a style="color:#47a447">Data Harga</a></li>
+    </ul>
+</div>
+<br />
+
+<br />
 
 
-    <div class="row">
-        @Html.Partial("CreateKaryawan")
-        <div class="col-md-6 col-xs-6">
-            <div class="thumbnail clearfix text-center" style="max-width:600px;width:100%">
-                <table class="table">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.nama_karyawan)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.email_karyawan)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.password)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.tempat_lahir)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.tgl_lahir)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.no_telp)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.alamat)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.jns_kelamin)
-                        </th>
-                        <th></th>
-                    </tr>
+<h3 style="color:#47a447" class="text-center">D A F T A R &nbsp;&nbsp; K A R Y A W A N</h3>
+<hr />
+@Html.Partial("CreateKaryawan2")
+<div class="row" id="rowku">
+    <div class="col-md-6 col-xs-6">
+        <div class="thumbnail clearfix text-center" style="max-width:1500px;width:100%">
+            <table class="table">
+                <tr>
+                    <th>
+                        Nama Karyawan
+                    </th>
+                    <th>
+                        Email Karyawan
+                    </th>
 
-                    @foreach (var item in Model)
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model)
                 {
                     <tr>
                         <td>
@@ -53,35 +53,18 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.email_karyawan)
                         </td>
+
                         <td>
-                            @Html.DisplayFor(modelItem => item.password)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.tempat_lahir)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.tgl_lahir)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.no_telp)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.alamat)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.jns_kelamin)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.id_karyawan }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.id_karyawan }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.id_karyawan })
+                            @Html.ActionLink("Ubah", "EditKaryawan", new { id = item.id_karyawan }, new { @class = "btn btn-warning btn-xs" })
+
+                            @Html.ActionLink("Delete", "DeleteKaryawan", new { id = item.id_karyawan }, new { @class = "btn btn-danger btn-xs" })
                         </td>
                     </tr>
-            }
-                </table>
-            </div>
+                }
+            </table>
         </div>
     </div>
+</div>
 
 
 
