--- a/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
@@ -12,8 +12,11 @@
 <div class="text-center">
     <ul class="nav nav-wizard" style="display:inline-block">
         <li><a style="color:#47a447">Design Website</a></li>
-        <li class="active"><a >Gambar Carausel / Homepage</a></li>
-        <li><a style="color:#47a447">Data Produk, Bahan, dan Jenis Sablon</a></li>
+        <li class="active"><a>Gambar Homepage</a></li>
+        <li><a style="color:#47a447">Data Karyawan</a></li>
+        <li><a style="color:#47a447">Data Produk</a></li>
+        <li><a style="color:#47a447">Data Bahan</a></li>
+        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
         <li><a style="color:#47a447">Data Harga</a></li>
 
     </ul>
@@ -42,7 +45,7 @@
 
 
             <input type="submit" value="Create" class="btn btn-default" style="padding-bottom:5px"/><br />
-            <p style="padding-bottom:5px;margin-top:10px"> @Html.ActionLink("Lanjut ke penambahan karyawan", "CreateKaryawan2", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi carausel dan hendak melanjutkan ke pengisian Karyawan?')", @class = "btn btn-warning btn-sm" })</p>
+            <p style="padding-bottom:5px;margin-top:10px"> @Html.ActionLink("Lanjut ke penambahan karyawan", "CreateKaryawan", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi carausel dan hendak melanjutkan ke pengisian Karyawan?')", @class = "btn btn-warning btn-sm" })</p>
             <br />
 
         }
