--- a/Pendaftaran_Tenant/Views/Penyewa/IndexProduk.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexProduk.cshtml
@@ -12,20 +12,20 @@
    
 <div class="row">
 
-    @Html.Partial("CreateProduk")
+    @Html.Partial("CreateProduk2")
 
     <div class="col-md-6 col-xs-6">
-        <div class="thumbnail clearfix text-center" style="max-width:600px;width:100%">
+        <div class="thumbnail clearfix text-center" style="max-width:600px;width:100%;margin-right:10%">
 
-            <h3>Daftar produk</h3>
-            <p><h5>anda bisa menambahkan bahan dan jenis sablon sesuai produk yang diinginkan</h5></p>
-
-            <table style="margin-left:10px;margin-right:10px">
+            <h3 style="color:#47a447">Daftar produk</h3>
+            <p><h5><b>Silahkan isi data Bahan dan Jenis Sablon di bawah</b></h5></p>
+            <hr />
+            <table style="margin-left:10%;margin-right:10px">
 
                 @foreach (var item in Model.Select((value, i) =>  new {i, value }))
                 {
                    
-                        if ((item.i % 3) == 0)
+                        if ((item.i % 2) == 0)
                         {
                             @:<tr>
                             }
@@ -34,15 +34,13 @@
                                     <p><img src="~/Content/Images/@item.value.foto_produk" style="max-height:100px" /></p>
                                     <p>@item.value.nama_produk</p>
                                     <p>
-                                        @Html.ActionLink("Tambah Bahan", "IndexBahan", new { id = item.value.id_produk }, new { @class = "btn btn-warning btn-xs" })
+                                        @Html.ActionLink("Tambah Bahan dan Jenis Sablon", "IndexBahan", new { id = item.value.id_produk }, new { @class = "btn btn-primary btn-xs" })
                                     </p>
-                                    <p>
-                                        @Html.ActionLink("Tambah Jenis Sablon", "IndexJenisSablon", new { id = item.value.id_produk }, new { @class = "btn btn-warning btn-xs" })
-                                    </p>
+                                   
                                 </div>
                             </td>
 
-                    if((item.i % 3) == 2)
+                    if((item.i % 2) == 2)
                     {
                         @:</tr>
                     }
